--- a/example/end-to-end.ipynb
+++ b/example/end-to-end.ipynb
@@ -2,26 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch_ex'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/ais-choi-01/DATA/Project/Python/utils/torch_utils/example/end-to-end.ipynb Cell 1'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/ais-choi-01/DATA/Project/Python/utils/torch_utils/example/end-to-end.ipynb#ch0000000?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpython_ex\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_label\u001b[39;00m \u001b[39mimport\u001b[39;00m Label_process\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/ais-choi-01/DATA/Project/Python/utils/torch_utils/example/end-to-end.ipynb#ch0000000?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch_ex\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_torch_base\u001b[39;00m \u001b[39mimport\u001b[39;00m opt\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/ais-choi-01/DATA/Project/Python/utils/torch_utils/example/end-to-end.ipynb#ch0000000?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch_ex\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_trainer\u001b[39;00m \u001b[39mimport\u001b[39;00m make_dataloader\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch_ex'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from python_ex._base import directory, utils\n",
     "from python_ex._label import Label_process\n",
     "\n",
-    "from torch_ex._torch_base import opt\n",
-    "from torch_ex._trainer import make_dataloader"
+    "from torch_ex._torch_base import learing_mode, opt, Label_style, File_style\n"
    ]
   },
   {
@@ -30,15 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parameter\n",
-    "\n",
-    "# Dataloader\n",
-    "batch_size = 16\n",
-    "num_worker = 8\n",
-    "\n",
-    "label_process = Label_process.Imagenet_1k\n",
-    "\n",
-    "data_size = [224, 224]"
+    "# directory\n",
+    "Data_root = \"/home/ais-choi-01/DATA/Data/\"\n",
+    "Result_root = directory._make_for_result(folder=\"../result_example/\", root_dir=directory._relative_root())"
    ]
   },
   {
@@ -47,11 +29,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dataset_opt = opt._dataloader(\n",
-    "    Batch_size=batch_size,\n",
-    "    Num_workers=num_worker,\n",
-    "    label.label_process.Imagenet_1k([_label.Label_style.CLASSIFICATION, ], [224, 224]),\n",
-    "    _label.file_process.classification(\"/home/ais-choi-01/DATA/Data/\"))"
+    "# Learning_opt\n",
+    "learning_opt = opt._learning.base(\n",
+    "    # Infomation about train\n",
+    "    Learning_date=utils.time_stemp(is_text=True),\n",
+    "    Learning_detail=\"\",\n",
+    "    Learning_mode=[learing_mode.TRAIN, learing_mode.VALIDATION],\n",
+    "\n",
+    "    # About Learning type and style\n",
+    "    Max_epochs=30,\n",
+    "    This_epoch=0,\n",
+    "\n",
+    "    # About logging\n",
+    "    Logging_parameters={learing_mode.TRAIN: [\"loss\", \"acc_@1\", \"acc_@5\"], learing_mode.VALIDATION: [\"loss\", \"acc_@1\", \"acc_@5\"]},\n",
+    "    Debugging_paramerters={learing_mode.TRAIN: [\"loss\", \"acc_@1\", \"acc_@5\"], learing_mode.VALIDATION: [\"loss\", \"acc_@1\", \"acc_@5\"]}\n",
+    ")\n",
+    "\n",
+    "# Dataloader_opt\n",
+    "dataloader_opt = opt._dataloader(\n",
+    "    Batch_size=16,\n",
+    "    Num_workers=8,\n",
+    "    Data_process=Label_process.Imagenet_1k([Label_style.CLASSIFICATION, ], [224, 224], Data_root),\n",
+    "    Data_label_style=Label_style.CLASSIFICATION,\n",
+    "    Data_file_style=File_style.IMAGE_FILE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make custom model\n",
+    "from torch_ex._structure import custom_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make custom model trainer\n",
+    "from torch_ex._trainer import Learning_process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class custom_trainer(Learning_process.End_to_End):\n",
+    "    def __init__(self, result_dir: str = None, log_file: str = None, is_resotre: bool = False, **opts):\n",
+    "        super().__init__(result_dir, log_file, is_resotre, **opts)\n",
+    "\n",
+    "    def fit(self, epoch: int, mode: str = \"train\", is_display: bool = False, save_root: str = None):\n",
+    "        return super().fit(epoch, mode, is_display, save_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_mode = custom_trainer(Result_root, learning_opt=learning_opt, dataloader_opt=dataloader_opt)"
    ]
   }
  ],
