--- a/example/end-to-end.ipynb
+++ b/example/end-to-end.ipynb
@@ -21,43 +21,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from python_ex._base import directory, utils\n",
-    "from torch_ex._torch_base import learing_mode, opt\n",
+    "from python_ex._base import Directory, Utils\n",
+    "from torch_ex._torch_base import Learning_Mode\n",
     "\n",
     "# directory\n",
     "Data_root = \"/home/ais-choi-01/DATA/Data/\"\n",
-    "Result_root = directory._make_for_result(folder=\"../result_example/\", root_dir=directory._relative_root())\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### set learning option ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Learning_opt\n",
-    "learning_opt = opt._learning.base(\n",
-    "    # Infomation about train\n",
-    "    Learning_date=utils.time_stemp(is_text=True),\n",
-    "    Learning_detail=\"\",\n",
-    "    Learning_mode=[learing_mode.VALIDATION],\n",
-    "\n",
-    "    # About Learning type and style\n",
-    "    Max_epochs=30,\n",
-    "    This_epoch=0,\n",
-    "\n",
-    "    # About logging\n",
-    "    Logging_parameters={learing_mode.TRAIN: [\"loss\", \"IoU\"], learing_mode.VALIDATION: [\"loss\", \"IoU\"]},\n",
-    "    Display_paramerters={learing_mode.TRAIN: [\"loss\", \"IoU\"], learing_mode.VALIDATION: [\"loss\", \"IoU\"]}\n",
-    ")"
+    "Result_root = \"/home/ais-choi-01/DATA/Result/Python/Pytorch/Deep Learning/torch_utils_example/\""
    ]
   },
   {
@@ -83,6 +52,39 @@
     "    Data_process=Label_process.BDD_100k(import_style=[Label_style.SEM_SEG, ], data_size=[224, 224], root=Data_root),\n",
     "    Data_label_style=Label_style.SEM_SEG,\n",
     "    Data_file_style=File_style.IMAGE_FILE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### set learning option ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_ex._trainer\n",
+    "\n",
+    "\n",
+    "# Learning_opt\n",
+    "learning_opt = opt._learning.base(\n",
+    "    # Infomation about train\n",
+    "    Learning_date=utils.time_stemp(is_text=True),\n",
+    "    Learning_detail=\"\",\n",
+    "    Learning_mode=[learing_mode.VALIDATION],\n",
+    "\n",
+    "    # About Learning type and style\n",
+    "    Max_epochs=30,\n",
+    "    This_epoch=0,\n",
+    "\n",
+    "    # About logging\n",
+    "    Logging_parameters={learing_mode.TRAIN: [\"loss\", \"IoU\"], learing_mode.VALIDATION: [\"loss\", \"IoU\"]},\n",
+    "    Display_paramerters={learing_mode.TRAIN: [\"loss\", \"IoU\"], learing_mode.VALIDATION: [\"loss\", \"IoU\"]}\n",
+    ")"
    ]
   },
   {
